--- a/src/main/resources/templates/sendNotificationPoll.html
+++ b/src/main/resources/templates/sendNotificationPoll.html
@@ -56,7 +56,7 @@
           margin: auto;
         "
 >
-    Hola,  <b th:text="${name}" ></b>, se ha generado una encuesta nueva
+    Hola, se ha generado una encuesta nueva
 </div>
 
 <hr
@@ -94,7 +94,7 @@
           font-weight: 700;
         "
 >
-    Ver  encuesta
+    Ver mis pendientes
 </button></a>
 </div>
 </body>
