--- a/src/main/resources/templates/sendComment.html
+++ b/src/main/resources/templates/sendComment.html
@@ -56,8 +56,7 @@
           margin: auto;
         "
 >
-    Hola, <b th:text="${name}" ,></b> ha agregado un Comentario
-    nuevo
+    Hola, <b th:text="${name}" ,></b> ha agregado un Comentario nuevo
 </div>
 
 <hr
@@ -102,7 +101,7 @@
             font-size: 12px;
           "
     >
-        Retroalimentación
+
     </div>
 
     <b
