--- a/src/main/resources/templates/sendCommentFeedback.html
+++ b/src/main/resources/templates/sendCommentFeedback.html
@@ -56,8 +56,7 @@
           margin: auto;
         "
 >
-     <b th:text="${name}" ,></b> ha agregado una
-    Respuesta a tu Comentario de Reconocimiento
+     <b th:text="${name}" ,></b> ha agregado una Respuesta a tu Comentario de Reconocimiento
 </div>
 
 <hr
